--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -10,8 +10,7 @@ body {
 }
 
 header .header-app {
-  display: grid;
-  grid-template-columns: 100px 600px 100px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   text-align: center;
@@ -32,7 +31,7 @@ header .header-app {
 
 .navbar a {
   text-decoration: none;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 1.8rem;
   color: black;
   font-size: 1.2rem;
   transition: ease-in-out 0.5s;
@@ -43,4 +42,36 @@ header .header-app {
   background-color: #df1a10;
   border-radius: 1.5rem;
   color: white;
+}
+
+.btn-register button {
+  border: none;
+  padding: 0.8rem 1.5rem;
+  border-radius: 1rem;
+  background-color: #df1a10;
+  color: white;
+  font-size: 1rem;
+  font-weight: bolder;
+  transition: ease-in-out 0.5s;
+}
+
+.btn-register button:hover {
+  box-shadow: 0 0 10px #ec3f35;
+}
+
+.navbar .navbar-down {
+  position: absolute;
+  flex-direction: column;
+  padding: 1rem;
+  border: 1px solid black;
+  align-items: start;
+  display: none;
+}
+
+.navbar-down.navbar-expand {
+  display: block;
+}
+
+.navbar .navbar-down li {
+  margin: 0;
 }
