ubah header menjadi web component

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,126 +4,12 @@
   box-sizing: border-box;
 }
 
+*{ -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; outline: none !important; }
+
 body {
   margin: 0;
   padding: 0;
-}
-
-header .header-app {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  padding: 0.5rem 2rem;
-}
-
-.navbar ul {
-  display: flex;
-  padding: 0;
-  align-items: center;
-  list-style: none;
-}
-
-.navbar ul li {
-  margin-inline: 0.8rem;
-}
-
-.navbar .item {
-  text-decoration: none;
-  padding: 0.5rem 1.8rem;
-  color: black;
-  font-size: 1.2rem;
-  transition: ease-in-out 0.5s;
-  border-radius: 1.5rem;
-}
-
-.navbar .item:hover {
-  background-color: #ec3f35;
-  border-radius: 1.5rem;
-  color: white;
-}
-
-.btn-register button {
-  border: none;
-  padding: 0.8rem 1.5rem;
-  border-radius: 1rem;
-  background-color: #ec3f35;
-  color: white;
-  font-size: 1rem;
-  font-weight: bolder;
-  transition: ease-in-out 0.5s;
-}
-
-.btn-register button:hover {
-  box-shadow: 0 0 10px #ec3f35;
-}
-
-.navbar-item {
-  position: relative;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  text-wrap: nowrap;
-  gap: 1rem;
-}
-
-.navbar-item:has(> .navbar-down)::after {
-  content: "";
-  width: 5px;
-  aspect-ratio: 1/1;
-  display: inline-block;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  transform: rotate(45deg);
-}
-
-.navbar .navbar-down {
-  position: absolute;
-  padding: 1rem;
-  background-color: #ec3f35;
-  color: white;
-  border-radius: 1rem;
-  align-items: start;
-  cursor: pointer;
-  display: none;
-  top: 100%;
-}
-
-.navbar-down.navbar-expand {
-  display: block;
-  animation: dropdown 200ms linear;
-}
-
-.navbar .navbar-down .item-down {
-  padding: 0.8rem;
-  margin-block: 0.8rem;
-  border-radius: 2rem;
-  transition: ease-in-out 0.5s;
-  width: 100%;
-  text-decoration: none;
-  color: white;
-}
-
-.navbar .navbar-down .item-down:hover {
-  background-color: white;
-  color: #ec3f35;
-  border-radius: 2rem;
-}
-
-.navbar .navbar-expand li {
-  margin: 0;
-  text-align: start;
-}
-
-@keyframes dropdown {
-  from {
-    transform: translateY(-0.5rem);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
+  font-family: Roboto, Quicksand, sans-serif;
 }
 
 main {
