--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 
-*{ -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important; -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; outline: none !important; }
+* {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
+  -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
+  outline: none !important;
+}
 
 body {
   margin: 0;
