--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -17,12 +17,32 @@ body {
 }
 
 .card img {
-  width: 250px;
+  width: 400px;
 }
 
 .bidang-section {
+  position: relative;
   background-image: url('background-pmr.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.bidang-section::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.322);
+  z-index: 1;
+}
+
+.content-section {
+  display: grid;
+  height: 100vh;
+ justify-items: center;
+ padding: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
