--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .bidang-section::before {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   right: 0;
@@ -42,7 +42,7 @@ body {
 .content-section {
   display: grid;
   height: 100vh;
- justify-items: center;
- padding: 2rem;
+  justify-items: center;
+  padding: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
