--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -47,21 +47,27 @@ body {
   display: grid;
   justify-items: center;
   justify-content: center;
-  padding-block: 6rem 10rem;
+  padding-block: 6rem 8rem;
   grid-template-columns: repeat(auto-fit, minmax(200px, 350px));
   gap: 4rem;
   z-index: 9999;
+  height: 100%;
 }
 
 .card {
+  position: relative;
+  display: grid;
   text-align: center;
   justify-items: center;
+  align-self: start;
+  height: 380px;
 }
 
 .card-img {
-  padding: 2rem 2rem 0 2rem;
-  background-color: #ec3f35;
+  height: 250px;
   border-radius: 1.5rem;
+  padding: 2rem;
+  background-color: #ec3f35;
   transition:
     box-shadow 0.5s ease-in-out,
     transform 0.5s ease-in;
@@ -70,11 +76,33 @@ body {
 }
 
 .card img {
-  display: block;
   margin: auto;
   border-radius: 1.5rem;
   width: 280px;
-  background-color: #ec3f35;
+}
+
+.card-capt {
+  display: none;
+}
+
+.card-capt.expand {
+  display: block;
+  max-height: 200px;
+  position: absolute;
+  align-self: start;
+  align-items: start;
+  max-width: 300px;
+  background-color: white;
+  justify-content: center;
+  border-radius: 1.5rem;
+  padding: 1rem;
+  bottom: 0;
+  top: 8rem;
+  animation: slideDown 200ms linear;
+}
+
+.card-capt p {
+  margin-block-end: 0;
 }
 
 .card a {
@@ -118,3 +146,20 @@ body {
   animation: slideDown 2s infinite;
   cursor: pointer;
 }
+
+.card-img.no-animation {
+  animation: none;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-1rem);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
