ubah shadow dom pada header app

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,7 +7,7 @@
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0) !important;
   -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important;
-  outline: none !important;
+  outline: none;
 }
 
 body {
@@ -16,169 +16,3 @@ body {
   font-family: Roboto, Quicksand, sans-serif;
 }
 
-.bidang-section {
-  position: relative;
-  background-image: url('/src/assets/image/background-pmr.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: 0;
-  height: 100%;
-  overflow: hidden;
-}
-
-.bidang-section::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.425);
-  z-index: 1;
-}
-
-.tagline {
-  display: flex;
-}
-
-.tagline h2 {
-  max-width: 1000px;
-  position: relative;
-  justify-content: center;
-  text-align: center;
-  margin: auto;
-  padding: 6rem 6rem 0 6rem;
-  color: rgb(255, 255, 255);
-  z-index: 2;
-  font-size: 2.2rem;
-}
-
-.content-section {
-  position: relative;
-  display: grid;
-  justify-items: center;
-  justify-content: center;
-  padding-block: 6rem 6rem;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 350px));
-  gap: 4rem;
-  z-index: 9999;
-  height: 100%;
-}
-
-.card {
-  position: relative;
-  display: grid;
-  text-align: center;
-  justify-items: center;
-  align-self: start;
-  height: 380px;
-}
-
-.card-img {
-  height: 250px;
-  border-radius: 1.5rem;
-  padding: 1.5rem;
-  background-color: #ec3f35;
-  transition:
-    box-shadow 0.5s ease-in-out,
-    transform 0.5s ease-in;
-  animation: HoverEffect 5s infinite;
-  cursor: pointer;
-}
-
-.card img {
-  margin: auto;
-  border-radius: 1.5rem;
-  width: 280px;
-}
-
-.card-capt {
-  display: none; /* Mulai dengan menyembunyikan elemen */
-  max-height: 0;
-  position: absolute;
-  max-width: 300px;
-  background-color: white;
-  justify-content: center;
-  border-radius: 1.5rem;
-  padding: 1rem;
-  bottom: 0;
-  top: 8rem;
-  transition: all 0.3s ease-out;
-  overflow: hidden;
-}
-
-.card-capt.expand {
-  display: block;
-  max-height: 200px;
-  animation: slideDown 200ms linear;
-}
-
-.card-capt p {
-  margin-block-end: 0;
-}
-.card-capt h3 {
-  margin-block-start: 0.5rem;
-}
-
-.card a {
-  color: #ec3f35;
-}
-
-@keyframes HoverEffect {
-  0%,
-  80%,
-  100% {
-    box-shadow: none;
-    transform: scale(1);
-  }
-  20%,
-  60% {
-    box-shadow: 20px 20px 15px rgba(0, 0, 0, 0.815);
-    transform: scale(1.02);
-  }
-}
-
-@keyframes arrowDown {
-  0% {
-    transform: translateY(-10px);
-    opacity: 0;
-  }
-  50% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(10px);
-    opacity: 0;
-  }
-}
-
-#arrow-down {
-  color: white;
-  font-size: 2rem;
-  padding: 1.2rem;
-  animation: arrowDown 2s infinite;
-  cursor: pointer;
-}
-
-.card-img.no-animation {
-  animation: none;
-}
-
-@keyframes slideDown {
-  from {
-    transform: translateY(-1rem);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-#arrow-up {
-  transform: rotate(180deg);
-  font-size: 2rem;
-  cursor: pointer;
-}
